# testeranto

./: .gitignore  .npmignore  .testeranto-agent-arko.sh  .testeranto_terminal_1775871738130.sh  .testeranto_terminal_1775873509958.sh  .testeranto_terminal_1775874350875.sh  .testeranto_terminal_1775874607415.sh  .testeranto_terminal_1775874958708.sh  .testeranto_terminal_1776187823365.sh  .testeranto_terminal_1776193857284.sh  .testeranto_terminal_1776194467276.sh  .testeranto_terminal_1776194616697.sh  .vscodeignore  ALL_LICENSES.txt  Cargo.toml  Gemfile  README copy.md  README.md  SOUL.md  agent.md  aider.Dockerfile  arko.md  bigFiles.sh  bun.lockb  bundle copy.js  bundle.js  debug.html  git-temp  go.mod  go.sum  index.js  index.ts  juna.md  mermaid.md  package.json  prodirek.md  test-buildkit-required.sh  test-required.Dockerfile  test_flavored.py  tsconfig copy.json  (+1 more)
exampleProject/: README.md  testeranto.ts
examples/: flavored_example.py
src/: Types.ts  agents.md  api.ts  color.css  color.md  colors.ts  graph.ts  index.ts  runtimes.ts  stakeholderExports.ts  style.ts  testeranto.ts  viz.md  vscodePlusStakeholder.ts
src/api/: api.ts  stakeholderHttp.ts  stakeholderWs.ts  vscodeExtensionHttp.ts  vscodeExtensionWs.ts
src/esbuildConfigs/: index.ts
src/features/: reverseIntegration.md  stakeholderHtml.md  testsJson.md
src/grafeovidajo/: README.md  bundle.js  index.ts  package-lock.json  package.json  publish.sh  tsconfig.json
src/graph/: createEdgeAttributes.ts  createGraph.ts  createGraphDataFile.ts  createGraphOperation.ts  createGraphUpdate.ts  createNodeAttributes.ts  dataToGraph.ts  extractGraphDataFromFile.ts  fromGrafeovidajoGraphData.ts  graphToData.ts  index.md  index.ts  isGraphData.ts  isGraphDataFile.ts  mergeGraphData.ts  toGrafeovidajoGraphData.ts
src/lib/: DOC.md  README.md  artifactory.md  interoptability.md
src/lib/pitono/: Pitono.py  README.md  __init__.py  publish.sh  pyproject.toml  setup.py  simple_adapter.py
src/lib/pitono/PM/: python.py
src/lib/pitono/examples/: calculator_test.py  simple_example.py
src/lib/pitono/pitono.egg-info/: PKG-INFO  SOURCES.txt
src/lib/pitono/src/: Pitono.py  __init__.py  base_act.py  base_action.py  base_arrange.py  base_assert.py  base_check.py  base_describe.py  base_expected.py  base_feed.py  base_given.py  base_it.py  base_map.py  base_setup.py  base_should.py  base_suite.py  base_then.py  base_validate.py  base_when.py  flavored.py  pitono_types.py  reverse_integration.py  simple_adapter.py
src/lib/pitono/src/PM/: __init__.py  python.py
src/lib/pitono/src/flavored/: __init__.py
src/lib/pitono/src/pitono.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lib/pitono/src/testeranto_pitono.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lib/pitono/testeranto.pitono.egg-info/: PKG-INFO  SOURCES.txt
src/lib/pitono/testeranto_pitono.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lib/pitono/tickets/: pythonic.md
src/lib/rusto/: Cargo.toml  README.md  publish.sh
src/lib/rusto/examples/: calculator.rs  calculator_complete_test.rs  calculator_test.rs  calculator_test_implementation.rs  calculator_test_specification.rs  interoperability_demo.rs  simple_test.rs
src/lib/rusto/src/: ast_transformer.rs  base_act.rs  base_action.rs  base_arrange.rs  base_assert.rs  base_check.rs  base_describe.rs  base_expected.rs  base_feed.rs  base_given.rs  base_it.rs  base_map.rs  base_setup.rs  base_should.rs  base_suite.rs  base_then.rs  base_validate.rs  base_value.rs  base_when.rs  flavored.rs  interoperability.rs  lib.rs  reverse_integration.rs  rusto.rs  rusto_artifactory.rs  rusto_helpers.rs  rusto_impl.rs  simple_adapter.rs  types.rs
src/lib/rusto/tickets/: rustic.md
src/server/: README.md  deps.ts  depsMocked.ts  depsTypes.ts  getRunnables.ts  htmlTemplate.ts  types.ts
src/serverDeprecated/: getRunnables.ts  types.ts
src/stakeholderApp/: ConfigurationPanel.tsx  TabNavigation.tsx  TestResultsSummary.tsx  TreePanel.tsx  VisualizationPanel.tsx  VisualizationTabs.tsx  graph.md  index.html  index.md  index.ts  index.tsx  (+2 more)
test/: logFilesTest.js
testeranto/: FileUtils.java  OutputArtifactProducer.java  TestFileFinder.java  agent-counters.json  docker-compose.yml  extension-config.json  golang_runtime.go  native_detection.rb  node_runtime.ts  python_runtime.py  reportsnode_build_errors  reportsweb_build_errors  ruby_runtime.rb  testeranto.ts  web_runtime.ts
tickets/: AiderProcessTreeProvider_testing.md  BuildKitUpgrade.md  Method GET not allowed for agents. Expected POST.md  TDT_AAA_style.md  Type Contract Enforcement Violation.md  agents.md  aider.md  artifactoryReborn.md  buildLogging.md  chat.md  colatedFiles.md  deps.md  devBuilders.md  endpointsForGraphSelection.md  golangBuilder.md  index.md  initCommand.md  initialDevops.md  integrateVscodeAndStakeholderReport.md  multiArchitecture.md  open-process-terminal.md  outputArtifacts.md  processMangerSpeedImprovements.md  resourceLocking.md  resourceLockingForFiles.md  server.md  sidecars.md  stakeholder+vscode_inteegrated_api.md  stakeholderV2.md  switchBranches.md  syzygy.md  testToolChainIntegration.md  tiposkriptoInteroptability.md  unifedSlices.md  unifyViewsprovidersAgentsApiGraph.md  views.md  vscode.md  vscodeDoesNotShowAllLogs.md  vscodeExtensionV2.md  vscodeViews.md
(+1621 files in other folders)
