[package]
name = "rust-server-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.8.0"
rusto = { path = "src/lib/rusto", version = "0.1.22" }

[lib]
name = "rust_server_runtime"
path = "src/lib.rs"
crate-type = ["rlib"]
test = false
doctest = false
bench = false
doc = true
proc-macro = false
harness = false
