[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testeranto-pitono"
version = "0.3.1"
description = "Python implementation of Testeranto"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["websockets>=12.0"]
authors = [{ name = "Adam Wong" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
# pitono-core-generator = "core_generator:main"  # Removed as core_generator doesn't exist

[tool.setuptools]
packages = ["testeranto-pitono"]

[tool.setuptools.package-dir]
testeranto-pitono = "src"
