[package]
name = "testeranto_rusto"
version = "0.1.4"
edition = "2021"
description = "Rust implementation of Testeranto"
authors = ["Testeranto Team"]
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
