[package]
name = "testeranto_rusto"
version = "0.3.0"
edition = "2021"
description = "Rust implementation of Testeranto"
authors = ["Testeranto Team"]
license = "MIT"
readme = "README.md"
publish = false  # Prevent accidental publishing

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
tempfile = "3.10"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "calculator_test"
path = "examples/calculator_test.rs"

[[example]]
name = "interoperability_demo"
path = "examples/interoperability_demo.rs"
